--- a/securecoding/src/main/resources/static/bootstrap/css/styles.css
+++ b/securecoding/src/main/resources/static/bootstrap/css/styles.css
@@ -397,7 +397,8 @@ select:disabled {
 .filebox label {
     height: 45px;
     width: 20%;
-    text-align: center;
+    line-height: 45px;
+    text-align: justify;
     background-color: #999999;
     border-radius: 0.25rem;
     cursor: pointer;
