--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -30,7 +30,7 @@
           </div>
           <div class="filebox">
             <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%">
-            <label th:for="file" style="margin-bottom: 2%; color: #2E2E2E; text-align: center;">파일 찾기</label>
+            <label th:for="file" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px">파일 찾기</label>
             <input id="file" name="file" type="file" style="margin-bottom: 2%; float: left"/>
             <script>
             $("#file").on('change',function(){
@@ -61,7 +61,7 @@
             </div>
             <div class="filebox">
                 <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%;">
-                <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E; text-align: center">파일찾기</label>
+                <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px">파일 찾기</label>
                 <input id="file2" name="file" type="file" style="margin-bottom: 2%; float: left;"/>
             </div>
             <script>
