--- a/securecoding/src/main/resources/templates/1/1.6.code.html
+++ b/securecoding/src/main/resources/templates/1/1.6.code.html
@@ -10,7 +10,7 @@
 <!-- Section-->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">15. 보안기능 결정에 사용되는 부적절한 입력값</h4>
+    <h4 class="fw-bolder" style="text-align: center">6. 위험한 형식 파일 업로드</h4>
     <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -23,66 +23,85 @@
                     <div class="tabs">
                         <div class="tab">
                             <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
-                            <label for="tab-1" class="tab-label">deleteMemberForm.html</label>
+                            <label for="tab-1" class="tab-label">BoardController.java</label>
                             <div class="tab-content">
-                                <pre><code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">...
-<input type="hidden" th:name="id" th:value="${id}" />
-<label th:for="name">이름</label>
-<label th:for="username">아이디</label>
-<button type="submit" class="btn">탈퇴</button>
-....</textarea></code></pre>
-                            </div>
-                        </div>
-                        <div class="tab">
-                            <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
-                            <label for="tab-2" class="tab-label">MemberController.java</label>
-                            <div class="tab-content">
-                                <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Controller
+                                <pre><code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">@Controller
 @RequiredArgsConstructor
-public class MemberController{
+public class BoardController {
 
     private final MemberService memberService;
+    private final BoardService boardService;
 
-    @PostMapping("/mypage/delete/{memberId}/vuln")
-    public String deleteMemberForm_vuln(@PathVariable("memberId") Long memberId, HttpServletRequest request,
-                                    HttpSession session, Model model) {
+    /* 게시글 생성 */
+    @GetMapping(value = {"/board/new", "/1/6/vuln", "/1/6/secure"})
+    public String CreateBoardForm(Model model) {
 
-        String id = request.getParameter("id");
+        BoardForm form = new BoardForm();
 
-        if (id == null) {
-            return "/1/1.15";
-        }
+        model.addAttribute("form", form);
 
-        Long memberid = Long.parseLong(id);
+        return "/1/1.6";
 
-        memberService.deleteMember(memberid);
+    }
 
-        request.getSession().removeAttribute("memberInfo");
-        session.invalidate();
+    @PostMapping("/1/6/vuln")
+    public String CreateBoardForm_vuln(BoardForm form, Model model,
+                                       MultipartHttpServletRequest request, MultipartFile file) throws IOException  {
 
-        model.addAttribute("message", "정말 탈퇴하시겠습니까?");
+        HttpSession session = request.getSession();
+
+        MemberInfo memberInfo = (MemberInfo) session.getAttribute("memberInfo");
+        Member member = memberService.findOne(memberInfo.getId());
+
+        Board board = Board.createBoard(
+                member,
+                form.getSubject(),
+                form.getContent(),
+                form.getFileName(),
+                form.getFilePath());
+
+        boardService.saveBoard(board, file);
+
+        model.addAttribute("message", "글 등록이 완료되었습니다.");
         model.addAttribute("searchUrl", "/");
 
         return "message";
     }
-}</textarea></code>
+}</textarea></code></pre>
                             </div>
                         </div>
                         <div class="tab">
-                            <input type="radio" name="css-tabs" id="tab-3" class="tab-switch">
-                            <label for="tab-3" class="tab-label">MemberService.java</label>
+                            <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
+                            <label for="tab-2" class="tab-label">BoardService.java</label>
                             <div class="tab-content">
                                 <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Service
-@Transactional
 @RequiredArgsConstructor
-public class MemberService {
+public class BoardService {
 
-    private final MemberRepository memberRepository;
+    private final BoardRepository boardRepository;
 
-    /* 회원 탈퇴 */
+    @Value("${file.dir}")
+    private String fileDir;
+
     @Transactional
-    public void deleteMember(Long memberId) {
-        memberRepository.deleteById(memberId);
+    public Long saveBoard(Board board, MultipartFile file) throws IOException {
+        String originalFilename = "";
+        String filePath = "";
+
+        if (!file.isEmpty()) {
+            originalFilename = file.getOriginalFilename();
+            filePath = fileDir + originalFilename;
+
+            file.transferTo(new File(filePath));
+
+        }
+
+        board.setFileName(originalFilename);
+        board.setFilePath(filePath);
+
+        boardRepository.save(board);
+
+        return board.getId();
     }
 }</textarea></code>
                             </div>
@@ -102,28 +121,33 @@ public class MemberService {
                   <div class="tabs">
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-4" checked class="tab-switch">
-                          <label for="tab-4" class="tab-label">MemberController.java</label>
+                          <label for="tab-4" class="tab-label">BoardController.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Controller
 @RequiredArgsConstructor
-public class MemberController{
+public class BoardController {
 
     private final MemberService memberService;
+    private final BoardService boardService;
 
-    @PostMapping("/mypage/delete/{memberId}/secure")
-    public String deleteMemberForm_secure(@PathVariable("memberId") Long memberId, HttpServletRequest request,
-                                  HttpSession session, Model model) {
+    @PostMapping("/1/6/secure")
+    public String CreateBoardForm_secure(BoardForm2 form, Model model,
+                                         MultipartHttpServletRequest request, MultipartFile file) throws IOException {
+        HttpSession session = request.getSession();
 
-        MemberInfo member = (MemberInfo) request.getSession().getAttribute("memberInfo");
+        MemberInfo memberInfo = (MemberInfo) session.getAttribute("memberInfo");
+        Member member = memberService.findOne(memberInfo.getId());
 
-        memberService.validateUpdate(member.getId(), memberId);
+        Board board = Board.createBoard(
+                member,
+                form.getSubject(),
+                form.getContent(),
+                form.getFileName(),
+                form.getFilePath());
 
-        memberService.deleteMember(memberId);
+        boardService.saveBoard_secure(board, file);
 
-        request.getSession().removeAttribute("memberInfo");
-        session.invalidate();
-
-        model.addAttribute("message", "정말 탈퇴하시겠습니까?");
+        model.addAttribute("message", "글 등록이 완료되었습니다.");
         model.addAttribute("searchUrl", "/");
 
         return "message";
@@ -133,19 +157,47 @@ public class MemberController{
                       </div>
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-5" class="tab-switch">
-                          <label for="tab-5" class="tab-label">MemberService.java</label>
+                          <label for="tab-5" class="tab-label">BoardService.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Service
-@Transactional
 @RequiredArgsConstructor
-public class MemberService {
+public class BoardService {
 
-    private final MemberRepository memberRepository;
+    private final BoardRepository boardRepository;
 
-    /* 회원 탈퇴 */
+    @Value("${file.dir}")
+    private String fileDir;
+
     @Transactional
-    public void deleteMember(Long memberId) {
-        memberRepository.deleteById(memberId);
+    public Long saveBoard_secure(Board board, MultipartFile file) throws IOException {
+        String originalFilename = " ";
+        String filePath = " ";
+
+
+        if (!file.isEmpty()) {
+            String originalFileExt = file.getOriginalFilename().substring(file.getOriginalFilename().lastIndexOf(".")+1);
+
+            if (file.getOriginalFilename().matches("[\\.\\%\\;\\/\\/]*")) {
+                throw new NotAllowExtException1("파일 이름에 허용하지 않는 문자열이 포함되었습니다.");
+            }
+            if (originalFileExt.equals("jpg") || originalFileExt.equals("png")
+                    || originalFileExt.equals("docx") || originalFileExt.equals("jpeg")) {
+
+                originalFilename = file.getOriginalFilename();
+                filePath = fileDir + originalFilename;
+
+                file.transferTo(new File(filePath));
+            } else {
+                throw new NotAllowExtException2("업로드 허용되는 파일 확장자가 아닙니다.");
+            }
+        }
+
+        board.setFileName(originalFilename);
+        board.setFilePath(filePath);
+
+        boardRepository.save(board);
+
+        return board.getId();
     }
 }</textarea></code>
                           </div>
@@ -158,8 +210,8 @@ public class MemberService {
       </div>
     </div>
       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <div th:each="member: ${members}" class="text-center">
-              <a th:if="${member.id == session.memberInfo.id}" class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/mypage/delete/{memberId} (memberId=${member.id})}">실습 하기</a></div>
+          <div class="text-center">
+              <a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/board}">실습 하기</a></div>
       </div>
   </div>
 </section>
