--- a/securecoding/src/main/resources/templates/1/1.6.code.html
+++ b/securecoding/src/main/resources/templates/1/1.6.code.html
@@ -211,7 +211,7 @@ public class BoardService {
     </div>
       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
           <div class="text-center">
-              <a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/board}">실습 하기</a></div>
+              <a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/board/new}">실습 하기</a></div>
       </div>
   </div>
 </section>
