--- a/securecoding/src/main/resources/templates/1/1.12.code.html
+++ b/securecoding/src/main/resources/templates/1/1.12.code.html
@@ -66,10 +66,10 @@ public String SSRFForm_vuln(HttpServletRequest request, HttpServletResponse resp
 @Controller
 public class CommandController {
 
-    private static Map<Integer, String> URLMAP;
+    private static Map&lt;Integer, String&gt; URLMAP;
 
     static {
-        URLMAP = new HashMap<>();
+        URLMAP = new HashMap&lt;&gt;();
         URLMAP.put(1, "http://localhost:8089/");
         URLMAP.put(2, "http://localhost:8089/board/new");
         URLMAP.put(3, "http://localhost:8080/2/8");
@@ -92,7 +92,6 @@ public class CommandController {
                 return "message";
             }
 
-            // 성공 로직
             return getView(url2);
         } catch (NumberFormatException e) {
             model.addAttribute("message", "허용하지 않는 URL 입니다.");
