--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -20,7 +20,7 @@
               <li><a class="dropdown-item" th:href="@{/1/8}">8. 부적절한 XML 외부개체 참조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/9}">9. XML 삽입</a></li>
               <li><a class="dropdown-item" th:href="@{/1/10}">10. LDAP 삽입</a></li>
-              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" th:href="@{/board/new}">11. 크로스사이트 요청 위조</a></li>
+              <li><a class="dropdown-item" th:if="${session.memberInfo != null}" th:href="@{/1/11}">11. 크로스사이트 요청 위조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/12}">12. 서버사이드 요청 위조</a></li>
               <li><a class="dropdown-item" th:href="@{/1/13}">13. HTTP 응답분할</a></li>
               <li><a class="dropdown-item" th:href="@{/1/14}">14. 정수형 오버플로우</a></li>
