--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -26,14 +26,14 @@
           </div>
           <div class="form-group">
             <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
-            <textarea th:field="*{content}" class="area" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
+            <textarea th:field="*{content}" class="form-control" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
           </div>
           <div class="filebox">
-            <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%">
+            <input class="upload-name" value="첨부파일" readonly placeholder="첨부파일" style="margin-bottom: 2%">
             <label th:for="file" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px; color: #fff;">파일 찾기</label>
             <input id="file" name="file" type="file" style="margin-bottom: 2%; float: left"/>
             <script>
-            $("#file").on('change',function(){
+            $("#file").on('click',function(){
                 var fileName = $("#file").val();
                 $(".upload-name").val(fileName);
             });
@@ -57,17 +57,17 @@
             </div>
             <div class="form-group">
                 <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
-                <textarea th:field="*{content}" class="area" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
+                <textarea th:field="*{content}" class="form-control" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
             </div>
             <div class="filebox">
-                <input class="upload-name" value="첨부파일" placeholder="첨부파일" style="margin-bottom: 2%;">
+                <input class="upload-name" value="첨부파일" placeholder="첨부파일" readonly style="margin-bottom: 2%;">
                 <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px; color: #fff">파일 찾기</label>
                 <input id="file2" name="file" type="file" style="margin-bottom: 2%; float: left;"/>
             </div>
             <script>
-            $("#file2").on('change',function(){
-                var fileName = $("#file2").val();
-                $(".upload-name").val(fileName);
+            $("#file2").on('click',function(){
+                var fileName2 = $("#file2").val();
+                $(".upload-name").val(fileName2);
             });
             </script>
             <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
