--- a/securecoding/src/main/resources/static/bootstrap/css/styles.css
+++ b/securecoding/src/main/resources/static/bootstrap/css/styles.css
@@ -398,7 +398,7 @@ select:disabled {
     height: 45px;
     width: 20%;
     line-height: 45px;
-    text-align: justify;
+    text-align: center;
     background-color: #999999;
     border-radius: 0.25rem;
     cursor: pointer;
