--- a/securecoding/src/main/resources/templates/board/updateBoardForm_secure.html
+++ b/securecoding/src/main/resources/templates/board/updateBoardForm_secure.html
@@ -11,7 +11,7 @@
 <!-- Section -->
 <div class="container" style="width: 50%; margin: 0 auto">
   <h4 style="font-weight: 500; text-align: center; margin-top: 5%">게시글 수정하기</h4>
-  <form th:object="${form}" style="margin-top: 5%">
+  <form th:object="${form}" method="post" style="margin-top: 5%">
     <div class="form-group" style="margin-bottom: 2%">
       <label th:for="subject" style="margin-bottom: 2%">제목</label>
       <input type="text" th:field="*{subject}" class="form-control"/>
