--- a/securecoding/src/main/resources/templates/2/2.2.html
+++ b/securecoding/src/main/resources/templates/2/2.2.html
@@ -22,8 +22,8 @@
             <br />
             <div align="right">
                 <form th:action="@{/board}" method="get">
-                    <button class="btn" style="float:right; background-color: #ffe74a" type="submit">찾기</button>
-                    <input type="text" name="keyword" class="form-control" style="width: 200px; margin-right: 2%"/>
+                    <button class="btn" style="float:right; background-color: #ffe74a; margin-left: 2%" type="submit">찾기</button>
+                    <input type="text" name="keyword" class="form-control" style="width: 200px"/>
                 </form>
             </div>
             <br />
@@ -65,7 +65,7 @@
             <br />
             <div align="right">
                 <form th:action="@{/board}" method="get">
-                    <button class="btn" style="float:right; background-color: #ffe74a; float: right" type="submit">찾기</button>
+                    <button class="btn" style="float:right; background-color: #ffe74a; margin-left: 2%" type="submit">찾기</button>
                     <input type="text" name="keyword" class="form-control" style="width: 200px; margin-left: 2%"/>
                 </form>
             </div>
@@ -103,7 +103,7 @@
         </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%; margin-bottom: 10%" th:href="@{/1/6/code}">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%; margin-bottom: 10%" th:href="@{/2/2/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
