--- a/securecoding/src/main/resources/templates/1/1.1.html
+++ b/securecoding/src/main/resources/templates/1/1.1.html
@@ -22,7 +22,7 @@
             <br />
             <div align="right">
                 <form th:action="@{/board}" method="get">
-                    <button class="btn" style="float:right; background-color: #ffe74a" type="submit">찾기</button>
+                    <button class="btn" style="float:right; background-color: #ffe74a; margin-left: 2%" type="submit">찾기</button>
                     <input type="text" name="keyword" class="form-control" style="width: 200px; margin-right: 2%"/>
                 </form>
             </div>
@@ -65,7 +65,7 @@
             <br />
             <div align="right">
                 <form th:action="@{/board}" method="get">
-                    <button class="btn" style="float:right; background-color: #ffe74a; float: right" type="submit">찾기</button>
+                    <button class="btn" style="float:right; background-color: #ffe74a; margin-left: 2%" type="submit">찾기</button>
                     <input type="text" name="keyword" class="form-control" style="width: 200px; margin-left: 2%"/>
                 </form>
             </div>
